--- a/config/production/hugo.toml
+++ b/config/production/hugo.toml
@@ -32,6 +32,6 @@ disableKinds = ["taxonomy", "section"]
 ## -----------------------------------------------
 
 [Params]
-  description = "A (modular, highly tweakable) responsive one-page theme for Hugo"
-  logo = "images/banner.jpg"
+  description = "Живу в Суздале половину жизни. А родилась и выросла на Дальнем востоке, на берегу Японского моря. Поэтому могу рассказать о Суздале и как сторонний наблюдатель, и как местный житель. Профессиональный гид. Но моё хобби — краеведение. Считаю, что лучше всего история запоминается через рассказы о конкретных людях, ходивших по суздальской земле. Я часто работаю с группами, где есть путешественники от мала до велика. Поэтому рассказываю о сложном так, что поймут и бабушки, и внуки. Уверена на 100%, что каждый из моих гостей узнает много нового и неизведанного о Суздале."
+  images = ["images/banner.webp"]
   favicon = true
